fix spacing and font for modal

--- a/app/assets/stylesheets/post_index.css.scss
+++ b/app/assets/stylesheets/post_index.css.scss
@@ -98,5 +98,6 @@ a:hover {
 }
 
 .modal-image {
+  width: 320px;
   margin: 0 auto;
 }
