--- a/app/assets/stylesheets/post_show.css.scss
+++ b/app/assets/stylesheets/post_show.css.scss
@@ -17,21 +17,22 @@
   font-size: 4em;
   margin: 0 auto;
   text-align: center;
-  font-family: 'Gotham';
+  font-family: 'Gotham Bold';
   font-style: bold;
 }
 
 #post-author{
   color: $red;
   margin: 0 auto;
-  font-size: 1.5em;
+  font-size: 2.5em;
   text-align: center;
-  font-family: 'Gotham';
+  font-family: 'Gotham Bold';
   padding-bottom: 10px;
 }
 
 #post-body{
   color: black;
+  font-size: 1.75em;
 }
 
 /* modal styling */
